--- a/_includes/site.html
+++ b/_includes/site.html
@@ -6,6 +6,7 @@
     {%- endif -%}
 </script>
 
+{% include main.html %}
 
 <section id="sectionMisc" class="mt-5">
     <h2>{{ site.data.strings.misc.title }}</h2>
