--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,13 @@
     <script type='text/javascript' >  
       const site = {
         data: {
+          base_url: '{{ "" | absolute_url }}',
           assets_url: '{{ "assets/" | absolute_url }}',
+
           // add more data here (from site.data), like "strings"
+          sprites: {{ site.data.sprites | jsonify }},
+          flags: {{ site.data.flags | jsonify }},
+
           strings: {{ site.data.strings | jsonify }}
         },
         version: '{{ site.version }}'
@@ -30,6 +35,8 @@
     <script src="{{ '/assets/js/bootstrap/bootstrap-toggle.min.js' | relative_url }}"></script>
 
     <script src="{{ '/assets/js/font-awesome/all.min.js' | relative_url }}"></script>
+
+    <script src="{{ '/assets/js/pixi/pixi.min.js' | relative_url }}"></script>
 
     {%- if jekyll.environment == "development" -%}
     <script src="{{ '/assets/js/app/bundle.js' | relative_url }}"></script>
