--- a/_includes/main_ui.html
+++ b/_includes/main_ui.html
@@ -1,25 +1,5 @@
-<div class="form-group">
-    <label for="inputState">Paw Left Part 1</label>
-    <select id="lstSelectLeftPart1" class="form-control">
-    </select>
+<div class="btn-group select-form" role="group" aria-label="Form" id="btnSelectForm">
 </div>
-<div class="form-group">
-    <label for="inputState">Paw Left Part 2</label>
-    <select id="lstSelectLeftPart2" class="form-control">
-    </select>
-</div>
-<div class="form-group">
-    <label for="inputState">Paw Right Part 1</label>
-    <select id="lstSelectRightPart1" class="form-control">
-    </select>
-</div>
-<div class="form-group">
-    <label for="inputState">Paw Right Part 2</label>
-    <select id="lstSelectRightPart1" class="form-control">
-    </select>
-</div>
-<div class="form-group">
-    <label for="inputState">Paw Center</label>
-    <select id="lstSelectCenter" class="form-control">
-    </select>
+
+<div id="lstSelectContainer">
 </div>
