add strings fix flags

--- a/_includes/main_ui.html
+++ b/_includes/main_ui.html
@@ -1,5 +1,8 @@
-<div class="btn-group select-form" role="group" aria-label="Form" id="btnSelectForm">
+<div class="form-group">
+    <label for="btnSelectForm" class="select-form-label">{{ site.data.strings.select_form.label }}</label>
+    <div class="d-block btn-group select-form" role="group" aria-label="Form" id="btnSelectForm">
+    </div>
 </div>
 
-<div id="lstSelectContainer">
+<div class="mt-2" id="lstSelectContainer">
 </div>
