--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,17 +1,27 @@
 <div class="row">
-    <div class="col-4">
+    <div class="col-3">
         {% include main_ui.html %}
     </div>
 
-    <div class="col-5 p-3" id='spriteViewContainer'>
+    <div class="col-5">
+        <div class="card">
+            <div class="card-img-top sprite-view-container text-center mx-auto" id='spriteViewContainer'></div>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn btn-primary" id="btnDownload">Download</a>
+            </div>
+        </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-4">
         <div class="card mx-2">
             <img src="http://via.placeholder.com/250x150" class="card-img-top" alt="flag name">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
             </div>
         </div>
     </div>
