--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
     {%- include footer.html -%}
 
     <script src="{{ '/assets/js/jquery-ui.min.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/select2/select2.min.js' | relative_url }}"></script>
 
     <script src="{{ '/assets/js/bootstrap/bootstrap.bundle.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/bootstrap/bootstrap-toggle.min.js' | relative_url }}"></script>
