--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,105 +1,96 @@
+// Pulse 4.5.3
+// Bootswatch
 
-$white: #F7F5EC;
-$gray-100: #f8f9fa;
-$gray-200: #ebebeb;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #888;
-$gray-700: #444;
-$gray-800: #303030;
-$gray-900: #222;
-$black: #09080A;
-$blue: #375a7f;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: #E74C3C;
-$orange: #fd7e14;
-$yellow: #F39C12;
-$green: #00bc8c;
-$teal: #20c997;
-$cyan: #3498DB;
-$primary: #912a25;
-$secondary: #D1765E;
-$success: rgb(23, 182, 46);
-$info: rgb(23, 176, 182);
-$warning: rgb(204, 212, 28);
-$danger: #ef0100;
-$light: $gray-500;
-$dark: $gray-900;
-$yiq-contrasted-threshold: 175;
-$link-color: rgb(162, 48, 44);
-$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-size-base: .9375rem;
-$h1-font-size: 3rem;
-$h2-font-size: 2.5rem;
-$h3-font-size: 2rem;
-$text-muted: $gray-600;
-$table-accent-bg: $gray-800;
-$input-group-addon-color: $black;
-$input-group-addon-bg: #C8CDC9;
-$custom-file-color: $gray-500;
-$dropdown-bg: #ded4c1;
-$component-active-bg: rgb(29, 100, 69);
-$dropdown-border-color: $component-active-bg;
-$dropdown-divider-bg: $gray-700;
-$dropdown-link-color: $black;
-$dropdown-link-hover-color: $white;
-$nav-link-padding-x: 2rem;
-$nav-tabs-border-color: $black;
-$nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
-$nav-tabs-link-active-color: $black;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
-$navbar-padding-y: 1rem;
-$navbar-dark-color: rgba($white,.6);
-$navbar-dark-hover-color: $white;
-$navbar-light-color: rgba($gray-900, .7);
-$navbar-light-hover-color: $gray-900;
-$navbar-light-active-color: $gray-900;
-$navbar-light-toggler-border-color: rgba($gray-900, .1);
-$pagination-border-width: 0;
-$pagination-hover-border-color: $black;
-$pagination-active-border-color: transparent;
-$pagination-bg: #BF985F;
-$pagination-disabled-bg: darken($pagination-bg, 10%);
-$pagination-disabled-border-color: transparent;
-$jumbotron-bg: $gray-800;
-$card-cap-bg: rgb(163, 147, 138);
-$card-bg: rgb(209, 209, 205);
-$popover-bg: $gray-800;
-$popover-header-bg: $gray-700;
-$toast-background-color: $gray-700;
-$toast-header-background-color: $gray-800;
-$modal-content-bg: rgb(209, 209, 205);
-$modal-content-border-color: #2F2624;
-$modal-header-border-color: $gray-700;
-$progress-bg: #363636;
-$breadcrumb-bg: $gray-700;
-$close-color: $white;
-$close-text-shadow: none;
-$pre-color: inherit;
-$card-cap-color: $black;
-$card-color: $black;
-$component-active-color: $black;
-$nav-tabs-link-active-bg: darken(rgb(163, 147, 138),10%);
-$nav-pills-link-active-bg: darken(rgb(163, 147, 138),10%);
-$modal-content-color: $black;
-$link-hover-color: $black;
-$dropdown-color: $black;
-$dropdown-link-hover-bg: #418467;
-$list-group-color: $black;
-$list-group-bg: #d1d1cd;
-$list-group-active-bg: #418467;
-$pagination-border-color: $black;
-$pagination-hover-color: $white;
-$pagination-color: $black;
-$nav-link-disabled-color: $gray-500;
-$card-border-color: $black;
-$card-border-width: 2px;
-$pagination-hover-bg: darken(rgb(163, 147, 138),10%);
-$pagination-active-bg: #ded4c1;
-$pagination-active-color: $black;
-$body-bg: rgb(238, 237, 231);
-$table-bg-level: -5;
-$pagination-disabled-color: $gray-700;
+//
+// Color system
+//
+
+$white:    #fff !default;
+$gray-100: #fafafa !default;
+$gray-200: #f9f8fc !default;
+$gray-300: #ededed !default;
+$gray-400: #cbc8d0 !default;
+$gray-500: #adb5bd !default;
+$gray-600: #868e96 !default;
+$gray-700: #444 !default;
+$gray-800: #343a40 !default;
+$gray-900: #17141f !default;
+$black:    #000 !default;
+
+$blue:    #007bff !default;
+$indigo:  #6610f2 !default;
+$purple:  #593196 !default;
+$pink:    #e83e8c !default;
+$red:     #fc3939 !default;
+$orange:  #fd7e14 !default;
+$yellow:  #efa31d !default;
+$green:   #13b955 !default;
+$teal:    #20c997 !default;
+$cyan:    #009cdc !default;
+
+$primary:       $purple !default;
+$secondary:     #a991d4 !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-200 !default;
+$dark:          $gray-900 !default;
+
+// Options
+
+$enable-rounded: false !default;
+
+// Body
+
+$body-color:                $gray-700 !default;
+
+// Links
+
+$link-hover-color:          $primary !default;
+
+// Fonts
+
+$font-size-base:              .875rem !default;
+
+// Tables
+
+$table-border-color:          rgba(0, 0, 0, .05) !default;
+
+// Forms
+
+$input-focus-border-color:              $primary !default;
+
+// Dropdowns
+
+$dropdown-link-color:               $gray-700 !default;
+$dropdown-link-hover-color:         $white !default;
+$dropdown-link-hover-bg:            $primary !default;
+
+// Navs
+
+$nav-tabs-border-color:             $gray-300 !default;
+$nav-tabs-link-hover-border-color:  $primary !default;
+
+// Navbar
+
+$navbar-padding-y:                  1.2rem !default;
+$navbar-dark-hover-color:           rgba($white, .9) !default;
+$navbar-dark-active-color:          rgba($white, .9) !default;
+$navbar-light-color:                rgba($black, .4) !default;
+$navbar-light-active-color:         rgba($black, .7) !default;
+$navbar-light-disabled-color:       rgba($black, .2) !default;
+
+// Progress bars
+
+$progress-bg:                       $gray-300 !default;
+$progress-bar-bg:                   $primary !default;
+
+// List group
+
+$list-group-bg:                     $gray-900 !default;
+$list-group-border-color:           transparent !default;
+$list-group-hover-bg:               lighten($list-group-bg, 10%) !default;
+$list-group-active-color:           $white !default;
+$list-group-active-bg:              $list-group-bg !default;
+$list-group-disabled-color:         lighten($list-group-bg, 30%) !default;
