--- a/_sass/_variables_dark.scss
+++ b/_sass/_variables_dark.scss
@@ -1,98 +1,172 @@
+// Solar 4.5.3
+// Bootswatch
 
-$white: #F7F5EC;
-$gray-100: #f8f9fa;
-$gray-200: #ebebeb;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #888;
-$gray-700: #444;
-$gray-800: #303030;
-$gray-900: #222;
-$black: #09080A;
-$blue: #375a7f;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: rgb(224, 12, 11);
-$orange: #fd7e14;
-$yellow: #f39c12;
-$green: rgb(23, 182, 46);
-$teal: #20c997;
-$cyan: #3498db;
-$primary: rgb(143, 45, 41);
-$secondary: rgb(134, 62, 59);
-$success: $green;
-$info: rgb(23, 176, 182);
-$warning: rgb(204, 212, 28);
-$danger: $red;
-$light: $gray-500;
-$dark: $gray-800;
-$yiq-contrasted-threshold: 175;
-$body-bg: $gray-900;
-$body-color: $white;
-$link-color: #ff645f;
-$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-size-base: .9375rem;
-$font-size-sm: $font-size-base * .88;
-$h1-font-size: 3rem;
-$h2-font-size: 2.5rem;
-$h3-font-size: 2rem;
-$text-muted: $gray-500;
-$table-accent-bg: $gray-800;
-$table-border-color: $gray-700;
-$input-border-color: $body-bg;
-$input-group-addon-color: $gray-500;
-$input-group-addon-bg: $gray-700;
-$custom-file-color: $gray-500;
-$custom-file-border-color: $body-bg;
-$dropdown-bg: $gray-900;
-$dropdown-border-color: $gray-700;
-$dropdown-divider-bg: $gray-700;
-$dropdown-link-color: $white;
-$dropdown-link-hover-color: $white;
-$dropdown-link-hover-bg: $primary;
-$nav-link-padding-x: 2rem;
-$nav-link-disabled-color: $gray-500;
-$nav-tabs-border-color: $gray-700;
-$nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
-$nav-tabs-link-active-color: $white;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
-$navbar-padding-y: 1rem;
-$navbar-dark-color: rgba($white, .75);
-$navbar-dark-hover-color: $white;
-$navbar-light-color: rgba($gray-900, .75);
-$navbar-light-hover-color: $gray-900;
-$navbar-light-active-color: $gray-900;
-$navbar-light-toggler-border-color: rgba($gray-900, .1);
-$pagination-border-width: 0;
-$jumbotron-bg: $gray-800;
-$card-cap-bg: $gray-800;
-$popover-bg: $gray-800;
-$popover-header-bg: $gray-700;
-$toast-background-color: $gray-700;
-$toast-header-background-color: $gray-800;
-$modal-content-bg: $gray-800;
-$modal-content-border-color: $gray-700;
-$modal-header-border-color: $gray-700;
-$progress-bg: $gray-700;
-$list-group-bg: $gray-800;
-$list-group-border-color: $gray-700;
-$list-group-hover-bg: $gray-700;
-$breadcrumb-bg: $gray-800;
-$close-color: $white;
-$close-text-shadow: none;
-$pre-color: inherit;
-$card-bg: $gray-900;
-$link-hover-color: lighten($link-color, 18%);
-$list-group-disabled-color: $gray-700;
-$list-group-action-color: $gray-600;
-$pagination-color: $white;
-$pagination-bg: lighten($primary, 10%);
-$pagination-disabled-bg: darken($primary, 10%);
-$pagination-active-bg: $primary;
-$pagination-active-color: $white;
-$list-group-active-color: $white;
-$dropdown-link-active-color: $white;
-$pagination-hover-color: $black;
-$breadcrumb-active-color: $gray-500;
+//
+// Color system
+//
+
+// stylelint-disable
+$white:    #fff !default;
+$gray-100: #fdf6e3 !default;
+$gray-200: #eee8d5 !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #839496 !default;
+$gray-700: #495057 !default;
+$gray-800: #073642 !default;
+$gray-900: #002b36 !default;
+$black:    #000 !default;
+
+$blue:    rgb(61, 175, 165) !default;
+$indigo:  #6610f2 !default;
+$purple:  #6f42c1 !default;
+$pink:    #e83e8c !default;
+$red:     #d33682 !default;
+$orange:  #fd7e14 !default;
+$yellow:  #cb4b16 !default;
+$green:   #2aa198 !default;
+$teal:    #20c997 !default;
+$cyan:    #268bd2 !default;
+$brown:    rgb(175, 144, 68) !default;
+
+$primary:       $blue !default;
+$secondary:     $brown !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $gray-100 !default;
+$dark:          $gray-800 !default;
+
+$enable-gradients: true;
+
+// Body
+
+$body-bg:                   $gray-900 !default;
+$body-color:                $gray-600 !default;
+
+// Links
+
+$link-color:                $success !default;
+$link-hover-color:          $link-color !default;
+
+// Components
+
+$component-active-color:      rgba(255, 255, 255, .75) !default;
+$component-active-bg:         $gray-800 !default;
+
+// Fonts
+
+$font-family-sans-serif:      "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default !default;
+
+// Tables
+
+$table-accent-bg:             rgba($white, .05) !default;
+$table-hover-bg:              rgba($white, .075) !default;
+$table-border-color:          $component-active-bg !default;
+$table-dark-bg:               $gray-500 !default;
+$table-dark-border-color:     darken($gray-500, 3%) !default;
+$table-dark-color:            $body-bg !default;
+
+// Forms
+
+$input-bg:                              #a9bdbd !default;
+$input-disabled-bg:                     #657b83 !default;
+$input-border-color:                    rgba($black, .15) !default;
+$input-placeholder-color:               #657b83 !default;
+$input-group-addon-color:               $gray-600 !default;
+$input-group-addon-bg:                  $gray-800 !default;
+
+// Dropdowns
+
+$dropdown-bg:                       $gray-800 !default;
+$dropdown-divider-bg:               $body-bg !default;
+$dropdown-link-color:               $body-color !default;
+$dropdown-link-hover-color:         rgba(255, 255, 255, .75) !default;
+$dropdown-link-hover-bg:            $body-bg !default;
+
+// Navs
+
+$nav-tabs-border-color:             $gray-800 !default;
+$nav-tabs-link-hover-border-color:  $nav-tabs-border-color !default;
+$nav-tabs-link-active-color:        $component-active-color !default;
+$nav-tabs-link-active-bg:           $body-bg !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color !default;
+
+// Navbars
+
+$navbar-light-color:                rgba($black, .4) !default !default;
+$navbar-light-active-color:         rgba($black, .7) !default !default;
+
+// Pagination
+
+$pagination-bg:                     transparent !default;
+$pagination-border-color:           $gray-800 !default;
+$pagination-hover-bg:               $gray-800 !default;
+$pagination-hover-border-color:     $gray-800 !default;
+$pagination-active-color:           rgba(255, 255, 255, .75) !default;
+$pagination-active-bg:              $gray-800 !default;
+$pagination-active-border-color:    $gray-800 !default;
+$pagination-disabled-color:         $gray-800 !default;
+$pagination-disabled-bg:            transparent !default;
+$pagination-disabled-border-color:  $gray-800 !default;
+
+// Jumbotron
+
+$jumbotron-bg:                      $gray-800 !default;
+
+// Cards
+
+$card-border-color:                 rgba($gray-900, .95) !default;
+$card-cap-bg:                       rgba($gray-800, .25) !default;
+$card-bg:                           rgba($gray-200, .125) !default;
+
+// Popovers
+
+$popover-bg:                        $gray-800 !default;
+$popover-border-color:              $body-bg !default;
+$popover-header-bg:                 $gray-800 !default;
+
+// Toasts
+
+$toast-background-color:            lighten($body-bg, 5%) !default;
+$toast-border-color:                rgba(0, 0, 0, .2) !default;
+$toast-header-color:                $body-color !default;
+$toast-header-background-color:     $toast-background-color !default;
+$toast-header-border-color:         $toast-border-color !default;
+
+// Modals
+
+$modal-content-bg:                  $gray-800 !default;
+$modal-content-border-color:        $body-bg !default;
+$modal-header-border-color:         $body-bg !default;
+
+// Progress bars
+
+$progress-bg:                       $gray-800 !default;
+$progress-bar-color:                $primary !default;
+
+// List group
+
+$list-group-bg:                     transparent !default;
+$list-group-border-color:           $gray-800 !default;
+$list-group-hover-bg:               $gray-800 !default;
+$list-group-active-color:           rgba(255, 255, 255, .75) !default;
+$list-group-disabled-color:         $component-active-bg !default;
+$list-group-disabled-bg:            transparent !default;
+$list-group-action-color:           $body-color !default;
+$list-group-action-hover-color:     $component-active-color !default;
+
+// Breadcrumbs
+
+$breadcrumb-bg:                     $component-active-bg !default;
+
+// Close
+
+$close-color:                       $body-color !default;
+$close-text-shadow:                 none !default;
+
+// Code
+
+$pre-color:                         inherit !default;
