--- a/assets/css/main-dark.scss
+++ b/assets/css/main-dark.scss
@@ -7,6 +7,7 @@ body[data-theme="dark"] {
     @import "bootstrap/bootstrap";
     @import "syntax-highlighting";
     @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
+    @import "bootswatch_dark";
     @import "custom_variables_dark";
     @import "custom";
     @import "custom_dark";
