--- a/assets/css/main-light.scss
+++ b/assets/css/main-light.scss
@@ -7,6 +7,7 @@ body[data-theme="light"] {
     @import "bootstrap/bootstrap";
     @import "syntax-highlighting";
     @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
+    @import "bootswatch";
     @import "custom_variables";
     @import "custom";
     @import "custom_light";
