--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,5 +6,6 @@
 @import "bootstrap/bootstrap";
 @import "syntax-highlighting";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
+@import "bootswatch";
 @import "custom_variables";
 @import "custom";
