--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,23 +7,23 @@
     {%- include header.html -%}
     <script type='text/javascript' >  
       const site = {
+        base_url: '{{ "" | absolute_url }}' + '/',
+        assets_url: '{{ "assets/" | absolute_url }}',
         data: {
-          base_url: '{{ "" | absolute_url }}' + '/',
-          assets_url: '{{ "assets/" | absolute_url }}',
+          strings: {{ site.data.strings | jsonify }},
 
           // add more data here (from site.data), like "strings"
           sprites: {{ site.data.sprites | jsonify }},
           flags: {{ site.data.flags | jsonify }},
           flags_config: {{ site.data.flags_config | jsonify }},
-
-          strings: {{ site.data.strings | jsonify }}
+          flags_wiki: {{ site.data.flags_wiki | jsonify }}
         },
         version: '{{ site.version }}'
       };
     </script>
 
     <div class="py-5 px-2" id="main-content">
-      <div class="container-fluid px-5 page-content">
+      <div class="container-fluid px-lg-5 page-content">
           {{ content }}
       </div>
     </div>
