--- a/_includes/main.html
+++ b/_includes/main.html
@@ -5,6 +5,14 @@
 
     <div class="col-lg-6 mt-sm-1">
         <div class="card">
+            <div class="card-body">
+                <div class="form-check mb-1">
+                    <input class="form-check-input" type="checkbox" value="" id="chbShowGrid">
+                    <label class="form-check-label" for="chbShowGrid">
+                        {{ site.data.strings.sprite.show_grid }}
+                    </label>
+                </div>
+            </div>
             <div class="card-img-top sprite-view-container mx-auto" id='spriteViewContainer'></div>
             <div class="card-body">
                 <h5 class="card-title" id="spriteViewTitle"></h5>
