--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
     <script src="{{ '/assets/js/font-awesome/all.min.js' | relative_url }}"></script>
 
     <script src="{{ '/assets/js/pixi/pixi.min.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/pixi/pixijs-grid.js' | relative_url }}"></script>
 
     {%- if jekyll.environment == "development" -%}
     <script src="{{ '/assets/js/app/bundle.js' | relative_url }}"></script>
