--- a/_includes/flags_list.html
+++ b/_includes/flags_list.html
@@ -1,5 +1,5 @@
 {% for flag_info in site.data.flags_wiki %}
-    <div class="col-2 mt-2 mb-1">
+    <div class="col-lg-2 col-md-3 col-sm-4 mt-2 mb-1">
         <div class="card card-flag-info-list">
             <img src="{{ flag_info.img }}" class="card-img-top card-flag-info-list-image" alt="{{ flag_info.name }}">
             <div class="card-body">
