add list add caching

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -6,8 +6,8 @@
 
     <div class="col-lg-6 mt-sm-1">
         <div class="form-group">
-            <label for="btnSelectForm" class="select-form-label">{{ site.data.strings.select_form.label }}</label>
-            <div class="d-block btn-group select-form" role="group" aria-label="Form" id="btnSelectForm">
+            <label for="lstSelectForm" class="select-form-label">{{ site.data.strings.select_form.label }}</label>
+            <div class="list-group list-group-horizontal select-form" role="group" aria-label="{{ site.data.strings.select_form.label }}" id="lstSelectForm">
             </div>
         </div>
         
