--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -93,7 +93,7 @@ ul.pagination {
 .select-part-icon-container {
     background-color: $gray-600;
 }
-.flag-item-icon {
+.select-part-icon {
     width: 32px;
     height: 32px;
 }
