--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -98,6 +98,7 @@ ul.pagination {
     height: 32px;
 }
 
-.card-flag-info-list-image {
-    height: 150px;
+.flag-info-image {
+    height: 100%;
+    width: auto;
 }
