--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-lg-3 col-md-5">
-        <div class="mt-2 mb-1" id="lstSelectContainer">
+        <div class="form-group">
+            <label for="lstSelectContainer" class="select-parts-label">{{ site.data.strings.select_parts.label }}</label>
+            <div class="mt-2 mb-1" id="lstSelectContainer"></div>
         </div>
     </div>
 
