--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,9 @@
 
     {%- include footer.html -%}
 
-    <script src="{{ '/assets/js/jquery-ui.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/select2/select2.min.js' | relative_url }}"></script>
 
-    <script src="{{ '/assets/js/bootstrap/bootstrap.bundle.min.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/bootstrap/bootstrap.min.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/bootstrap/bootstrap-toggle.min.js' | relative_url }}"></script>
 
     <script src="{{ '/assets/js/font-awesome/all.min.js' | relative_url }}"></script>
