--- a/_includes/site.html
+++ b/_includes/site.html
@@ -8,6 +8,10 @@
 
 {% include main.html %}
 
+<section id="sectionFlagList" class="mt-5">
+    {% include flags_list.html %}
+</section>
+
 <section id="sectionMisc" class="mt-5">
     <h2>{{ site.data.strings.misc.title }}</h2>
     <div class="row mx-1">
