--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/jquery-ui.min.css' | relative_url }}">
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/font-awesome/all.min.css' | relative_url }}">
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/select2/select2.min.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/spectrum-colorpicker2/spectrum.min.css' | relative_url }}">
 
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/bootstrap/bootstrap-toggle.min.css' | relative_url }}">
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/select2/select2-bootstrap4.min.css' | relative_url }}">
