--- a/_includes/main.html
+++ b/_includes/main.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     
-        <div class="card">
+        <div class="card mt-2">
             <div class="card-body">
                 <div class="form-check mb-1">
                     <input class="form-check-input" type="checkbox" value="" id="chbShowGrid">
@@ -22,7 +22,24 @@
                     </label>
                 </div>
             </div>
-            <div class="card-img-top sprite-view-container mx-auto" id='spriteViewContainer'></div>
+
+            <div class="row no-gutters">
+                <div class="col-md-2">
+                    <div class="form-group ml-2 form-group-craws-color">
+                        <label for="txtCrawsColor">{{ site.data.strings.sprite.craws_color_label }}</label>
+                        <input type="text" class="form-control form-control-sm basic" id="txtCrawsColor" />
+                    </div>
+                    <div class="form-group ml-2 form-group-outlines-color">
+                        <label for="txtOutlinesColor">{{ site.data.strings.sprite.outlines_colors_label }}</label>
+                        <input type="text" class="form-control form-control-sm basic" id="txtOutlinesColor" value="#000000" />
+                    </div>
+                </div>
+                <div class="col-md-6 offset-md-1">
+                    <div class="card-img-top sprite-view-container mx-auto" id='spriteViewContainer'></div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+
             <div class="card-body">
                 <h5 class="card-title" id="spriteViewTitle"></h5>
                 <p class="card-text" id="spriteViewDescription"></p>
@@ -34,5 +51,3 @@
     </div>
 </div>
 
-
-{% include flags_list.html %}
