--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -106,3 +106,9 @@ ul.pagination {
 .nav-link-parts {
     width: 130px;
 }
+
+.color-palette-item {
+    .sp-original-input-container {
+        width: 80%;
+    }
+}
