--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,53 +1,82 @@
 <div class="row">
-    <div class="col-lg-3 col-md-5">
+    <div class="col-lg-3 mb-2">
         <div class="form-group">
-            <label for="lstSelectContainer" class="select-parts-label">{{ site.data.strings.select_parts.label }}</label>
-            <div class="mt-2 mb-1" id="lstSelectContainer"></div>
+            <label for="lstSelectContainer"
+                class="select-parts-label">{{ site.data.strings.select_parts.label }}</label>
+            <div class="mt-2" id="lstSelectContainer"></div>
         </div>
     </div>
 
-    <div class="col-lg-9 col-md-7 mt-sm-1">
-        <div class="form-group">
-            <label for="lstSelectForm" class="select-form-label">{{ site.data.strings.select_form.label }}</label>
-            <div class="list-group list-group-horizontal select-form" role="group" aria-label="{{ site.data.strings.select_form.label }}" id="lstSelectForm">
+    <div class="col-lg-9">
+        <div class="row no-gutters">
+            <div class="col-12">
+                <div class="form-group">
+                    <label for="lstSelectForm"
+                        class="select-form-label">{{ site.data.strings.select_form.label }}</label>
+                    <div class="list-group list-group-horizontal select-form" role="group"
+                        aria-label="{{ site.data.strings.select_form.label }}" id="lstSelectForm">
+                    </div>
+                </div>
             </div>
         </div>
-    
-        <div class="card mt-2">
-            <div class="card-body">
-                <div class="form-check mb-1">
-                    <input class="form-check-input" type="checkbox" value="" id="chbShowGrid">
-                    <label class="form-check-label" for="chbShowGrid">
-                        {{ site.data.strings.sprite.show_grid }}
-                    </label>
+
+        <div class="row no-gutters">
+            <div class="col-md-9">
+                <div class="card">
+                    <div class="form-check m-2">
+                        <input class="form-check-input" type="checkbox" value="" id="chbShowGrid">
+                        <label class="form-check-label" for="chbShowGrid">
+                            {{ site.data.strings.sprite.show_grid }}
+                        </label>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <div class="form-group ml-2 mr-md-2 form-group-craws-color">
+                                <label for="txtCrawsColor">{{ site.data.strings.sprite.craws_color_label }}</label>
+                                <input type="text" class="form-control form-control-sm" id="txtCrawsColor" />
+                            </div>
+                            <div class="form-group ml-2 mr-md-2 form-group-outlines-color">
+                                <label for="txtOutlinesColor">{{ site.data.strings.sprite.outlines_colors_label }}</label>
+                                <input type="text" class="form-control form-control-sm" id="txtOutlinesColor" value="#000000" />
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="card-img-top sprite-view-container mx-auto" id='spriteViewContainer'></div>
+                        </div>
+                        <div class="col-lg-3"></div>
+                    </div>
+
+                    <div class="card-body">
+                        <h5 class="card-title" id="spriteViewTitle"></h5>
+                        <p class="card-text" id="spriteViewDescription"></p>
+
+                        <a href="#" class="btn btn-primary" id="btnDownload">{{ site.data.strings.sprite.download }}</a>
+                        <a href="#" class="btn btn-primary"
+                            id="btnFullDownload">{{ site.data.strings.sprite.full_download }}</a>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-3 pl-2 mt-3" id="lstColorPalette">
+                <label for="lstColorPalette">{{ site.data.strings.color_palette.label }}</label>
 
-            <div class="row no-gutters">
-                <div class="col-md-2">
-                    <div class="form-group ml-2 form-group-craws-color">
-                        <label for="txtCrawsColor">{{ site.data.strings.sprite.craws_color_label }}</label>
-                        <input type="text" class="form-control form-control-sm basic" id="txtCrawsColor" />
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="searchHelpColorPalette"><i class="fas fa-search d-inline"></i></span>
                     </div>
-                    <div class="form-group ml-2 form-group-outlines-color">
-                        <label for="txtOutlinesColor">{{ site.data.strings.sprite.outlines_colors_label }}</label>
-                        <input type="text" class="form-control form-control-sm basic" id="txtOutlinesColor" value="#000000" />
-                    </div>
+                    <input type="text" class="form-control fuzzy-search" id="searchColorPalette"
+                        aria-label="{{site.data.strings.color_palette.search_label}}" aria-describedby="searchHelpColorPalette"
+                        placeholder="{{site.data.strings.color_palette.search_label}}">
                 </div>
-                <div class="col-md-6 offset-md-1">
-                    <div class="card-img-top sprite-view-container mx-auto" id='spriteViewContainer'></div>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-
-            <div class="card-body">
-                <h5 class="card-title" id="spriteViewTitle"></h5>
-                <p class="card-text" id="spriteViewDescription"></p>
-                
-                <a href="#" class="btn btn-primary" id="btnDownload">{{ site.data.strings.sprite.download }}</a>
-                <a href="#" class="btn btn-primary" id="btnFullDownload">{{ site.data.strings.sprite.full_download }}</a>
+        
+                <ul class="list-group list">
+                </ul>
+        
+                <nav class="my-2" aria-label="{{site.data.strings.color_palette.pagination_label}}">
+                    <ul class="pagination paginationBottom justify-content-center">
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
 </div>
-
