--- a/_includes/site.html
+++ b/_includes/site.html
@@ -7,10 +7,12 @@
 </script>
 
 <section id="sectionMain" class="mb-5">
+    <h2>{{ site.data.strings.designer.title }}</h2>
     {% include main.html %}
 </section>
 
 <section id="sectionFlagList" class="mb-5">
+    <h2>{{ site.data.strings.flag_info.title }}</h2>
     {% include flags_list.html %}
 </section>
 
