--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -1,9 +1,11 @@
 <hr class="mt-5">
 <h2>Credit</h2>
 
-https://en.wikipedia.org/wiki/Rainbow_flag_(LGBT)
-https://en.wikipedia.org/wiki/LGBT_symbols
-https://lgbta.wikia.org/
-https://lgbt.wikia.org/
-https://nonbinary.wiki/
-https://www.youtube.com/watch?v=uRQUUmGxs0E
+
+<p>Source for Flags from Wikipedia (<a href="https://en.wikipedia.org/wiki/Rainbow_flag_(LGBT)">Rainbow flag (LGBT)</a>, <a href="https://en.wikipedia.org/wiki/LGBT_symbols">LGBT symbols</a>
+<a href="https://lgbta.wikia.org/">LGBTA Wikia</a>, <a href="https://lgbt.wikia.org/">LGBT Wikia</a> and <a href="https://nonbinary.wiki/">Nonbinary wiki</a>.</p>
+
+<p>Also check out this <a href="https://www.youtube.com/watch?v=uRQUUmGxs0E"><i class="fab fa-youtube"></i> Video Fun With Flags: Pride Flags & What They All Mean</a>
+by <a href="https://www.youtube.com/channel/UCrSVc3he0AQD_CEqOIVdvyg">Powered By Rainbows</a></p>
+
+<p>I'm sorry if you can't find your flag, but some flags are just to complex or can't easy "pixelated" into sprites, I want to try add custom sprites in the future.</p>
