--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,10 @@
             <span class="mx-2 p-1"><a href="https://github.com/{{site.github_username | url_encode}}" target="_blank" rel="noopener">
               <i class="fab fa-2x fa-github-square"></i><span class="sr-only">GitHub</span></a></span>
             {%- endif -%}
+            {%- if site.furaffinity_username -%}
+            <span class="mx-2 p-1"><a href="https://www.furaffinity.net/user/{{site.furaffinity_username | url_encode}}" target="_blank" rel="noopener">
+              <i class="fab fa-2x fa-paw"></i><span class="sr-only">Furaffinity</span></a></span>
+            {%- endif -%}
           </li>
           {%- if site.email -%}
           <li>
