--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
             {%- endif -%}
             {%- if site.furaffinity_username -%}
             <span class="mx-2 p-1"><a href="https://www.furaffinity.net/user/{{site.furaffinity_username | url_encode}}" target="_blank" rel="noopener">
-              <i class="fab fa-2x fa-paw"></i><span class="sr-only">Furaffinity</span></a></span>
+              <i class="fas fa-2x fa-paw"></i><span class="sr-only">Furaffinity</span></a></span>
             {%- endif -%}
           </li>
           {%- if site.email -%}
