--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand mx-lg-2" rel="author" href="{{ '/' | relative_url }}">
-    <span class="ml-2">{{ site.title | escape }}</span> {%- if site.description -%} <span class="d-none d-sm-inline"> - {{ site.description | escape }}</span> {%- endif -%}
+    <span class="ml-2">{{ site.title | escape }}</span> {%- if site.short_description -%} <span class="d-none d-sm-inline"> - {{ site.short_description | escape }}</span> {%- endif -%}
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
